src/test/ui/proc-macro/macros-in-extern-derive.stderr
error: `derive` may only be applied to structs, enums and unions
  --> $DIR/macros-in-extern-derive.rs:2:5
   |
LL |     #[derive(Copy)]
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

